deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsbackend-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: devopsbackend
  template:
    metadata:
      labels:
        app: devopsbackend
    spec:
      imagePullSecrets:
        - name: devopsbackend
      containers:
        - name: devopsbackend-api
          image: ghcr.io/kriszchan/devopsbackend:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: devopsbackend-cluster-ip-service
spec:
  selector:
    app: devopsbackend
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsbackend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pk-backend.jcloud.jedlik.cloud
  rules:
    - host: pk-backend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopsbackend-cluster-ip-service
                port:
                  number: 80
